--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="312dp" />
+        app:layout_constraintGuide_begin="365dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -43,17 +43,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="503dp" />
+        app:layout_constraintGuide_begin="454dp" />
 
     <Button
-        android:id="@+id/addToCartBtn"
-        android:layout_width="200dp"
+        android:id="@+id/addToCartButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/add_to_cart"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.942"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <TextView
         android:id="@+id/relatedProductsTextView"
@@ -70,21 +73,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
-    <TextView
-        android:id="@+id/TopReviewTitleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="100dp"
-        android:text="@string/popular_review"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
-
     <ImageView
         android:id="@+id/itemImageView"
         android:layout_width="111dp"
@@ -98,58 +86,17 @@
 
     <ImageView
         android:id="@+id/sellerImageView"
-        android:layout_width="67dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="52dp"
+        android:layout_width="77dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="5dp"
         android:src="@drawable/baseline_broken_image_24"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/itemDescTextView"
-        app:layout_constraintVertical_bias="0.175" />
-
-    <ImageView
-        android:id="@+id/topReviewImageView"
-        android:layout_width="67dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="70dp"
-        android:src="@drawable/baseline_broken_image_24"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TopReviewTitleTextView"
-        app:layout_constraintVertical_bias="0.3" />
-
-    <ImageView
-        android:id="@+id/relatedProduct1ImageView"
-        android:layout_width="67dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="32dp"
-        android:src="@drawable/baseline_broken_image_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
-
-    <ImageView
-        android:id="@+id/relatedProduct2ImageView"
-        android:layout_width="67dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="32dp"
-        android:src="@drawable/baseline_broken_image_24"
-        app:layout_constraintEnd_toStartOf="@+id/relatedProduct3ImageView"
-        app:layout_constraintStart_toEndOf="@+id/relatedProduct1ImageView"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
-
-    <ImageView
-        android:id="@+id/relatedProduct3ImageView"
-        android:layout_width="67dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="40dp"
-        android:src="@drawable/baseline_broken_image_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/baseline_person2_24"
+        tools:srcCompat="@drawable/baseline_person2_24" />
 
     <TextView
         android:id="@+id/itemNameTextView"
@@ -158,6 +105,7 @@
         android:layout_marginStart="21dp"
         android:layout_marginTop="28dp"
         android:text="@string/item_name"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/itemImageView"
@@ -170,6 +118,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="21dp"
         android:text="@string/item_price"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/itemImageView"
@@ -177,120 +126,31 @@
         tools:text="@string/item_price" />
 
     <TextView
-        android:id="@+id/itemRatingTextView"
+        android:id="@+id/sellerLabelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/number_rating"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/itemImageView"
-        app:layout_constraintTop_toBottomOf="@+id/itemPriceTextView"
-        tools:text="@string/number_rating" />
-
-    <TextView
-        android:id="@+id/sellerLabelTextView"
-        android:layout_width="39dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="4dp"
         android:text="@string/seller"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.086"
+        app:layout_constraintHorizontal_bias="0.074"
         app:layout_constraintStart_toEndOf="@+id/sellerImageView"
         app:layout_constraintTop_toBottomOf="@+id/itemDescTextView"
-        tools:ignore="TextSizeCheck"
         tools:text="@string/seller" />
 
     <TextView
-        android:id="@+id/reviewerNameTextView"
+        android:id="@+id/quantityTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="@string/reviewer_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.11"
-        app:layout_constraintStart_toEndOf="@+id/topReviewImageView"
+        android:layout_marginStart="20dp"
+        android:text="@string/quantity_amt"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        tools:text="@string/reviewer_name" />
-
-    <TextView
-        android:id="@+id/reviewDescTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="30dp"
-        android:text="@string/review_desc"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/topReviewImageView"
-        app:layout_constraintTop_toBottomOf="@+id/reviewerNameTextView"
-        tools:text="@string/review_desc" />
-
-    <TextView
-        android:id="@+id/relatedProduct1TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="265dp"
-        android:text="@string/related_products_name_1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relatedProduct1ImageView"
-        tools:text="@string/related_products_name_1" />
-
-    <TextView
-        android:id="@+id/relatedProductPrice1TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="265dp"
-        android:text="@string/related_products_price_1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relatedProduct1TextView"
-        tools:text="@string/related_products_price_1" />
-
-    <TextView
-        android:id="@+id/relatedProductPrice2TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/related_products_price_2"
-        app:layout_constraintEnd_toStartOf="@+id/relatedProductPrice3TextView"
-        app:layout_constraintStart_toEndOf="@+id/relatedProductPrice1TextView"
-        app:layout_constraintTop_toBottomOf="@+id/relatedProduct2TextView"
-        tools:text="@string/related_products_price_2" />
-
-    <TextView
-        android:id="@+id/relatedProductPrice3TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="265dp"
-        android:text="@string/related_products_price_3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relatedProduct3TextView"
-        tools:text="@string/related_products_price_3" />
-
-    <TextView
-        android:id="@+id/relatedProduct2TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/related_products_name_2"
-        app:layout_constraintEnd_toStartOf="@+id/relatedProduct3TextView"
-        app:layout_constraintStart_toEndOf="@+id/relatedProduct1TextView"
-        app:layout_constraintTop_toBottomOf="@+id/relatedProduct2ImageView"
-        tools:text="@string/related_products_name_2" />
-
-    <TextView
-        android:id="@+id/relatedProduct3TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="265dp"
-        android:text="@string/related_products_name_3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relatedProduct3ImageView"
-        tools:text="@string/related_products_name_3" />
+        tools:text="@string/quantity_amt" />
 
     <TextView
         android:id="@+id/sellerNameTextView"
@@ -298,46 +158,88 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:text="@string/seller_name"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.097"
+        app:layout_constraintHorizontal_bias="0.095"
         app:layout_constraintStart_toEndOf="@+id/sellerImageView"
         app:layout_constraintTop_toBottomOf="@+id/sellerLabelTextView"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.617"
         tools:text="@string/seller_name" />
 
     <TextView
         android:id="@+id/itemDescTextView"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/item_desc"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline3"
         tools:text="@string/item_desc" />
 
     <RatingBar
-        android:id="@+id/topReviewRatingBar"
-        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
-        android:layout_width="81dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="5dp"
-        android:numStars="5"
-        app:layout_constraintBottom_toTopOf="@+id/reviewDescTextView"
-        app:layout_constraintStart_toEndOf="@+id/topReviewImageView"
-        app:layout_constraintTop_toBottomOf="@+id/reviewerNameTextView"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <RatingBar
         android:id="@+id/itemRatingBar"
         style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
-        android:layout_width="78dp"
-        android:layout_height="16dp"
+        android:layout_width="94dp"
+        android:layout_height="26dp"
         android:layout_marginStart="21dp"
-        android:numStars="5"
-        app:layout_constraintBottom_toTopOf="@+id/itemRatingTextView"
+        android:layout_marginTop="10dp"
+        android:max="5"
+        android:rating="0"
         app:layout_constraintStart_toEndOf="@+id/itemImageView"
         app:layout_constraintTop_toBottomOf="@+id/itemPriceTextView" />
+
+    <GridView
+        android:id="@+id/dynamicRelatedProductGridView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="1dp"
+        android:clickable="true"
+        android:horizontalSpacing="4dp"
+        android:numColumns="3"
+        android:verticalSpacing="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relatedProductsTextView" />
+
+    <EditText
+        android:id="@+id/quantityNumberText"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="number"
+        android:text="@string/quantity_number"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintEnd_toStartOf="@+id/plusAmtButton"
+        app:layout_constraintStart_toEndOf="@+id/minusSignButton"
+        app:layout_constraintTop_toTopOf="@+id/guideline"
+        app:layout_constraintVertical_bias="0.477"
+        tools:text="@string/quantity_number" />
+
+    <Button
+        android:id="@+id/plusAmtButton"
+        android:layout_width="40dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="10dp"
+        android:text="@string/plus_sign_btn"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintEnd_toStartOf="@+id/addToCartButton"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+    <Button
+        android:id="@+id/minusSignButton"
+        android:layout_width="40dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:text="@string/minus_sign_btn"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintStart_toEndOf="@+id/quantityTextView"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
