--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -229,7 +229,7 @@
             android:id="@+id/productGridView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="false"
+            android:clickable="true"
             android:horizontalSpacing="4dp"
             android:numColumns="3"
             android:verticalSpacing="4dp" />
