--- a/app/src/main/res/layout/fragment_seller_profile.xml
+++ b/app/src/main/res/layout/fragment_seller_profile.xml
@@ -147,7 +147,7 @@
             android:id="@+id/textView16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/name_date"
+            android:text="@string/product_info"
             app:layout_constraintBottom_toTopOf="@+id/guideline10"
             app:layout_constraintEnd_toStartOf="@+id/guideline11"
             app:layout_constraintStart_toStartOf="parent" />
@@ -165,7 +165,7 @@
             android:id="@+id/textView18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/status"
+            android:text="@string/order_date"
             app:layout_constraintBottom_toTopOf="@+id/guideline10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline12" />
@@ -195,6 +195,7 @@
             app:layout_constraintWidth_percent="0.9">
 
             <LinearLayout
+                android:id="@+id/orders_received_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
