--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,9 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+            app:srcCompat="@drawable/welcome_background"
+            android:src="@drawable/welcome_background"
+            tools:srcCompat="@drawable/welcome_background" />
 
         <TextView
             android:id="@+id/welcome_registration_text"
