--- a/app/src/main/res/layout/fragment_buyer_profile.xml
+++ b/app/src/main/res/layout/fragment_buyer_profile.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:visibility="gone">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -167,8 +167,8 @@
                     android:minWidth="48dp"
                     android:minHeight="48dp"
                     android:text="@string/edit_payment_method"
-                    android:textAppearance="@style/clickable_text"
                     android:textAlignment="center"
+                    android:textAppearance="@style/clickable_text"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
