--- a/app/src/main/res/layout/fragment_seller_profile.xml
+++ b/app/src/main/res/layout/fragment_seller_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="gone"
     app:layout_constraintWidth_percent="0.85">
 
     <TextView
