--- a/app/src/main/res/layout/fragment_seller_registration.xml
+++ b/app/src/main/res/layout/fragment_seller_registration.xml
@@ -9,6 +9,7 @@
     tools:context=".SellerRegistrationFragment">
 
     <ScrollView
+        android:id="@+id/buyer_profile_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
