--- a/app/src/main/res/layout/cart_recycler_item.xml
+++ b/app/src/main/res/layout/cart_recycler_item.xml
@@ -12,7 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="201dp"
+        android:layout_height="match_parent"
         android:layout_margin="8dp"
         android:clickable="true">
 
@@ -70,23 +70,22 @@
 
         <Button
             android:id="@+id/cartAddButton"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
             android:text="@string/cart_add_text"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/cartCardImage"
+            app:layout_constraintStart_toStartOf="@+id/cartCardPrice"
             app:layout_constraintTop_toBottomOf="@+id/cartCardAmt" />
 
         <Button
             android:id="@+id/cartRemoveButton"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
             android:text="@string/cart_remove_text"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/cartAddButton"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cartAddButton"
-            app:layout_constraintTop_toBottomOf="@+id/cartCardAmt" />
+            app:layout_constraintTop_toTopOf="@+id/cartAddButton" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
