--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -50,25 +50,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cartItemList"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/cartCheckoutButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cartItemNumber" />
-
-    <TextView
-        android:id="@+id/cartTotalPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/cartTotalPrice"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/cartItemList"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintStart_toStartOf="@+id/cartItemList"
-        app:layout_constraintTop_toBottomOf="@+id/cartItemList" />
 
     <Button
         android:id="@+id/cartCheckoutButton"
