--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -72,26 +72,15 @@
         app:layout_constraintTop_toTopOf="@+id/paymentMethodBackground" />
 
     <TextView
-        android:id="@+id/addPaymentMethodText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/addPaymentMethodText"
-        app:layout_constraintEnd_toEndOf="@+id/paymentMethodBackground"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/paymentMethodBackground"
-        app:layout_constraintTop_toBottomOf="@+id/paymentMethodBackground" />
-
-    <TextView
         android:id="@+id/savedAddressText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:text="@string/savedAddressText"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/checkoutTitle"
         app:layout_constraintStart_toStartOf="@+id/checkoutTitle"
-        app:layout_constraintTop_toBottomOf="@+id/addPaymentMethodText" />
+        app:layout_constraintTop_toBottomOf="@+id/paymentMethodBackground" />
 
     <TextView
         android:id="@+id/addressBackground"
@@ -130,39 +119,28 @@
         app:layout_constraintTop_toTopOf="@+id/addressBackground" />
 
     <TextView
-        android:id="@+id/addAddressText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/addAddressText"
-        app:layout_constraintEnd_toEndOf="@+id/addressBackground"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/addressBackground"
-        app:layout_constraintTop_toBottomOf="@+id/addressBackground" />
-
-    <TextView
         android:id="@+id/orderSummaryText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginBottom="24dp"
         android:text="@string/orderSummaryText"
         android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/orderSummaryBackground"
         app:layout_constraintEnd_toEndOf="@+id/checkoutTitle"
         app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="@+id/checkoutTitle"
-        app:layout_constraintTop_toBottomOf="@+id/addAddressText" />
+        app:layout_constraintStart_toStartOf="@+id/checkoutTitle" />
 
     <TextView
         android:id="@+id/orderSummaryBackground"
         android:layout_width="0dp"
         android:layout_height="150dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
+        android:layout_marginBottom="32dp"
         android:background="#DADADA"
+        app:layout_constraintBottom_toTopOf="@+id/checkoutBackButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/orderSummaryText" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/orderSummaryName"
@@ -206,22 +184,25 @@
         android:id="@+id/checkoutBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="64dp"
         android:text="@string/checkoutBackButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/checkoutProceedButton"
-        app:layout_constraintStart_toStartOf="@+id/orderSummaryBackground"
-        app:layout_constraintTop_toBottomOf="@+id/orderSummaryBackground" />
+        app:layout_constraintStart_toStartOf="@+id/orderSummaryBackground" />
 
     <Button
         android:id="@+id/checkoutProceedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:backgroundTint="#008512"
         android:text="@string/checkoutProceedButton"
+        app:layout_constraintBottom_toBottomOf="@+id/checkoutBackButton"
         app:layout_constraintEnd_toEndOf="@+id/orderSummaryBackground"
         app:layout_constraintStart_toEndOf="@+id/checkoutBackButton"
-        app:layout_constraintTop_toBottomOf="@+id/orderSummaryBackground" />
+        app:layout_constraintTop_toTopOf="@+id/checkoutBackButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
